--- a/src/it/index.textile
+++ b/src/it/index.textile
@@ -6,7 +6,7 @@ h2. Agriturismo
 
 notextile. <section>
 
-L'_Agriturismo Mauro_ ad Oleis di Manzano, a due passi dall'"Abbazia di Rosazzo(sito internet dell'abbazia di rosazzo)":http://www.abbaziadirosazzo.it, nasce dalla passione di Roberto e Dolores per la cantina ed i piatti tipici friulani.
+L'_Agriturismo Mauro_ ad Oleis di Manzano, a due passi dall'"Abbazia di Rosazzo(sito internet dell'abbazia di rosazzo)":http://www.abbaziadirosazzo.it e dal fiume Natisone, nasce dalla passione di Roberto e Dolores per la cantina ed i piatti tipici friulani.
 
 A disposizione ci sono 50 posti a sedere, dei quali 10 nel terrazzo all'esterno, è adatto ad ospitare pranzi e cene di amici, compleanni e cerimonie.
 
