--- a/src/it/index.textile
+++ b/src/it/index.textile
@@ -10,9 +10,7 @@ L'_Agriturismo Mauro_ ad Oleis di Manzano, a due passi dall'"Abbazia di Rosazzo(
 
 A disposizione ci sono 50 posti a sedere, dei quali 10 nel terrazzo all'esterno, è adatto ad ospitare pranzi e cene di amici, compleanni e cerimonie.
 
-È aperto tutto l'anno, tutti i giorni della settimana, a pranzo ed a cena, dalle ore 10 alle ore 24.
-
-Dispone di un ampio cortile e parcheggio.
+È aperto tutto l'anno, tutti i giorni della settimana, a pranzo ed a cena, dalle ore 10 alle ore 24. Dispone di un ampio cortile e parcheggio.
 
 notextile. </section>
 </li>
