--- a/src/it/index.textile
+++ b/src/it/index.textile
@@ -6,7 +6,7 @@ h2. Agriturismo
 
 notextile. <section>
 
-L'_Agriturismo Mauro_ ad Oleis di Manzano, a due passi dall'"Abbazia di Rosazzo(sito internet dell'abbazia di rosazzo)":http://www.abbaziadirosazzo.it e dal fiume Natisone, nasce dalla passione di Roberto e Dolores per la cantina ed i piatti tipici friulani.
+L'*Agriturismo Mauro* ad Oleis di Manzano, a due passi dall'"Abbazia di Rosazzo(sito internet dell'abbazia di rosazzo)":http://www.abbaziadirosazzo.it e dal fiume Natisone, nasce dalla passione di Roberto e Dolores per la cantina ed i piatti tipici friulani.
 
 A disposizione ci sono 50 posti a sedere, dei quali 10 nel terrazzo all'esterno, è adatto ad ospitare pranzi e cene di amici, compleanni e cerimonie.
 
@@ -20,7 +20,7 @@ h2. Piatti
 
 notextile. <section>
 
-I piatti dell'_Agriturismo Mauro_ si basano sulla cucina friulana semplice e genuina. 
+I piatti dell'*Agriturismo Mauro* si basano sulla cucina friulana semplice e genuina. 
 
 I nostri clienti posso apprezzare piatti di stagione basati su:
 
@@ -41,9 +41,9 @@ h2. Cantina
 
 notextile. <section>
 
-L'_Agriturismo Mauro_ nasce come azienda agricola per la produzione e la vendita diretta di vini friulani.
+L'*Agriturismo Mauro* nasce come azienda agricola per la produzione e la vendita diretta di vini friulani.
 
-L'azienda famigliare coltiva 5 ettari di vigneti, Roberto si occupa di ogni aspetto dalla potatura all'imbottigliamento.
+L'azienda famigliare coltiva 5 ettari di vigneti di *Ronchi del Sole*, Roberto si occupa di ogni aspetto dalla potatura all'imbottigliamento.
 
 È possibile acquistare i nostri vini sia in bottiglia che in formati più grandi direttamente nella sede della nostra azienda. Disponiamo di:
 
